--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		(function () {
 			var data = [];
 			var i = 0;
+
 			while (i < 200) {
 				var dateObj = new Date();
 				dateObj.setHours(Math.random() * 24);
@@ -46,9 +47,9 @@
 						y: Math.round(Math.random() * 255 + 43)
 					});					
 				} 
-
 				i++;
 			}
+
 			var n = 400;
 			var now = new Date();
 			var transformDate = function (d) {
@@ -62,37 +63,35 @@
 			};
 
 			data = transformDate(data);
-
-			console.log('... ', data);
 			
-			var glucose = d3.select('.glucose'),
-					svg = glucose.append('svg')
-										 .attr('width', 800)
-										 .attr('height', 400),
-					margin = {top: 20, right: 60, bottom: 20, left: 60},
-					width = +svg.attr('width') - margin.left - margin.right,
-					height = +svg.attr('height') - margin.top - margin.bottom,
-					g = svg.append('g').attr('transform', 'translate(' + margin.left + ',' + margin.top + ')');
+			var glucose = d3.select('.glucose');
+			var svg = glucose.append('svg')
+				.attr('width', 800)
+				.attr('height', 400);
+			var margin = {top: 20, right: 60, bottom: 20, left: 60};
+			var width = +svg.attr('width') - margin.left - margin.right,
+			var height = +svg.attr('height') - margin.top - margin.bottom,
+			var g = svg.append('g').attr('transform', 'translate(' + margin.left + ',' + margin.top + ')');
 
 			var x = d3.scaleTime()
-								.domain([new Date, new Date])
-								.nice(d3.timeDay)
-    						.range([0, width]);
+				.domain([new Date, new Date])
+				.nice(d3.timeDay)
+				.range([0, width]);
 			var y = d3.scaleLinear()
-								.domain([0, n])
-								.range([height, 0]);
+				.domain([0, n])
+				.range([height, 0]);
 			var y2 = d3.scaleLinear()
-								 .domain([0, 22.2])
-								 .range([height, 0]);
+				.domain([0, 22.2])
+				.range([height, 0]);
 			var axisLeft = d3.axisLeft(y)
-											 .tickSize(-width);
+				.tickSize(-width);
 			var axisBottom = d3.axisBottom(x)
-												 .tickFormat(d3.timeFormat("%I %p"))
-												 .ticks(d3.timeHour.every(2));
+				.tickFormat(d3.timeFormat("%I %p"))
+				.ticks(d3.timeHour.every(2));
 			var axisRight = d3.axisRight(y2)
-												 .tickSize(0)
-												 .tickFormat(d3.format(".1f"))
-												 .tickValues([0.0, 2.8, 5.6, 8.3, 11.1, 13.9, 16.7, 19.4, 22.2]);
+				.tickSize(0)
+				.tickFormat(d3.format(".1f"))
+				.tickValues([0.0, 2.8, 5.6, 8.3, 11.1, 13.9, 16.7, 19.4, 22.2]);
 
 			// defs
 			g.append('defs').append('clipPath')
@@ -182,7 +181,8 @@
 			var sort = function (a, b) {
 				return a - b;
 			};
-			// 사분위
+			
+			// quantile
 			var quantileData = function (models) {
 				var data = [];
 				_.each(models, function (model) {
@@ -199,7 +199,6 @@
 					if (!_.isUndefined(d)) {
 						d.sort(sort);
 					}
-					console.log('... sort: ', d);
 				});
 
 				var res = [];
@@ -234,9 +233,6 @@
 			};
 			
 			var data2 = quantileData(data);
-			// console.log(data);
-			// console.log(data2);
-
 			var line = d3.line()
 				// .curve(d3.curveBasis)
 				.x(function (d) { return x(d.date); })
